2010.02.26: David Nichols
	 * fixed bugs in checking default arguments
	 * implemented changes that allow QoreBigIntNode to be subclassed;
	   implemented BigIntTypeInfo to allow compatibility with types that
	   inherit QoreBigIntNode
	 * implemented generic default argument handling for builtin and user
	   variants
	 * applied hard typing to lib/ql_string.cpp

2010.02.25: David Nichols
	 * implemented C++-like syntax for creating new objects with a
	   variable declaration like: my Mutex $m()
	 * applied support for C++-like constructor syntax with new object
	   member declarations (i.e. private { Mutex $.m(); } )
	 * implemented default argument values in user signatures
         * changed precedence of comma (',') operator to be more sane (long 
	   overdue); applied workarounds to parser to maintain some backwards-
	   compatibility with the old broken precedence at the statement level

2010.02.24: David Nichols
	 * hard typing fixes, do not throw parse type exceptions when
	   referencing undeclared members of a class with a memberGate()
	   method
	 * fixed closure signature and return type parsing
	 * only raise a parse error for illegal access to private members if
	   there is not memberGate function
	 * check for calls using callTypeInfo
	 * fixed list assignment type checking
	 * fixed closure return type verification with %require-types
	 * fixed global variable default value assignment with hard types 
	 * fixed default value assignments for types generically
	 * assume code returns NOTHING if no return type is declared and
	   PO_REQUIRE_TYPES is set (i.e %require-types parse directive)
	 * updated object += hash to check member access and throw an
	   exception if necessary
	 * updated hard typing support to not initialize variables and members
	   with a default value based on their type

2010.02.23: David Nichols
	 * applied hard typing to lib/QC_GetOpt.cpp and to split in
	   lib/ql_string.cpp